--- a/css/styles.css
+++ b/css/styles.css
@@ -6,37 +6,50 @@ body {
   line-height: 1.75;
   color: #3b3f47;
 }
-h1{
-    font-size: 6rem;
-    line-height: 1.1;
-    font-weight: 700;
-    color: #0b1320;
-    font-style: normal;
+h1 {
+  font-family: Helvetica, sans-serif;
+  font-size: 6rem;
+  line-height: 1.1;
+  font-weight: 700;
+  color: #0b1320;
+  font-style: normal;
 }
+/* SECTION 1----STARTING PART(start) */
 .std-page {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
 }
-.start {
-    margin: 0 210px;
-    padding: 88px 25px 0px;
-  }
-.row {
-    margin-left: -15px;
-    margin-right: -15px;
+.class1 {
+  margin-top: 100px;
+  margin-right: 100px;
 }
-.start-left-box{
-  padding: 0 100px 40px;
+.start {
+  margin: 0 210px;
+  padding: 88px 10px 0px;
+}
+.row {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.start-left-box {
+  /* padding: 0 100px 40px; */
+  padding: 0px 100px 100px;
+  position: relative;
+  bottom: 50px;
+}
+.start-right-img {
+  text-align: left;
+  justify-content: center;
 }
 
-.start-text{
-    font-family:Helvetica,sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1.25rem;
-    line-height: 1.4;
-    color: #3b3f47;
+.start-text {
+  font-family: Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.25rem;
+  line-height: 1.4;
+  color: #3b3f47;
 }
 .bg-img {
   background-image: url("../../images/bg-img.png");
@@ -55,7 +68,7 @@ h1{
   transform: translateZ(0);
   filter: blur(2px);
   line-height: 0;
-  margin-top: -50px;
+  margin-top: -97px;
   right: 100px;
   /* animation: blur 2s linear 0.25s ; */
 }
@@ -85,65 +98,64 @@ h1{
     opacity: 1;
   }
 }
+/* BUTTONS */
 .mt-md {
   margin-top: 20px;
+}
+a,
+a:focus,
+a:visited {
+  text-decoration: none;
 }
 
 .button {
   text-transform: uppercase;
-  margin: 0;
-  padding: 5px 30px;
+  margin: 0 17px 0 0;
+  padding: 5px 20px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 28px;
+  font-style: normal;
+  cursor: pointer;
+  border: none;
+  outline: 0;
+  border-radius: 3px;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  display: inline-block;
+  transition: background-color 0.15s ease-in;
+  white-space: normal;
+  min-width: 185px;
 }
-.button--solid {
-    color: #fff !important;
-    padding: 10px 30px;
-    font-size: 0.875rem;
-    vertical-align: bottom;
-    min-width: 160px;
-  }
-  .button--solid.button--black {
-    background: #0b1320;
-  }
-  .btn-dark:hover {
-    background-color: #202738;
-  }
-.button--ghost {
-    padding: 9px 29px;
-    font-size: 0.875rem;
-    background: 0 0;
-    border-style: solid;
-    border-width: 1px;
-  }
-  .btn-outline-dark:hover {
-    padding: 8px 28px;
-    border: 2px solid #0b1320;
-  }
-  .button--ghost-white-padding {
-    padding: 9px 74px;
-    font-size: 0.875rem;
-    background: 0 0;
-    border-style: solid;
-    border-width: 1px;
-    color: #fff;
-    border: solid 1px rgba(255, 255, 255, 0.7);
-  }
-  .button--ghost-white-padding:hover {
-    background-color: rgba(255, 255, 255, 0.15);
-    color: #fff;
-  }
-  .button--ghost-white {
-    padding: 9px 29px;
-    font-size: 0.875rem;
-    background: 0 0;
-    border-style: solid;
-    border-width: 1px;
-    color: #fff;
-    border: solid 1px rgba(255, 255, 255, 0.7);
-  }
-  .button--ghost-white:hover {
-    background-color: rgba(255, 255, 255, 0.15);
-    color: #fff;
-  }
+.btn-outline-dark {
+  color: #0b1320;
+  border-color: #0b1320;
+  border-style: solid;
+  border-width: 1px;
+  font-size: 0.875rem;
+}
+.btn-outline-dark:hover {
+  /* padding: 8px 28px; */
+  border: 2px solid #0b1320;
+  background-color: transparent;
+  color: #0b1320;
+
+}
+
+.btn-dark:hover {
+  background-color: #202738;
+}
+/* END OF BUTTONS */
+
+/* RESPONSIVE STARTER PART */
+@media only screen and (min-width: 60rem)
+{
+  
+}
+
+
 .l-col-widget {
   margin-bottom: 40px;
 }
