--- a/css/styles.css
+++ b/css/styles.css
@@ -21,16 +21,17 @@ h1 {
   width: 100%;
 }
 .class1 {
-  margin-top: 100px;
-  margin-right: 100px;
+  /* margin-top: 100px;
+  margin-right: 100px; */
+  position: relative;
 }
 .start {
   margin: 0 210px;
   padding: 88px 10px 0px;
 }
 .row {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin: 0% 15% 0%;
+  padding-top: 6%;
 }
 .start-left-box {
   /* padding: 0 100px 40px; */
@@ -50,6 +51,11 @@ h1 {
   font-size: 1.25rem;
   line-height: 1.4;
   color: #3b3f47;
+}
+.start-text > p {
+  color: #3b3f47;
+  font-size: 0.875rem;
+  margin: 0;
 }
 .bg-img {
   background-image: url("../../images/bg-img.png");
@@ -141,7 +147,6 @@ a:visited {
   border: 2px solid #0b1320;
   background-color: transparent;
   color: #0b1320;
-
 }
 
 .btn-dark:hover {
@@ -150,11 +155,20 @@ a:visited {
 /* END OF BUTTONS */
 
 /* RESPONSIVE STARTER PART */
-@media only screen and (min-width: 60rem)
-{
-  
-}
+@media only screen and (max-width: 940px) {
+  h1 {
+    font-size: 2rem;
+  }
+  .bg-img{
+    width: 500px;
+  }
+  .start-left-box {
+    padding:0%
+  }
+  .button{
 
+  }
+}
 
 .l-col-widget {
   margin-bottom: 40px;
