--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+/* *,::after,::before{
+  box-sizing:inherit;
+} */
 body {
   font-family: Helvetica, sans-serif;
   font-weight: 400;
@@ -6,6 +9,15 @@ body {
   line-height: 1.75;
   color: #3b3f47;
 }
+p {
+  font-family: Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1rem;
+  line-height: 1.75;
+  color: #3b3f47;
+  margin: 10px 0;
+}
 h1 {
   font-family: Helvetica, sans-serif;
   font-size: 6rem;
@@ -13,6 +25,15 @@ h1 {
   font-weight: 700;
   color: #0b1320;
   font-style: normal;
+}
+h2 {
+  font-size: 1.75rem;
+  line-height: 2.125rem;
+  line-height: 1.25;
+  font-family: neue-haas-grotesk-display, Helvetica, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #0b1320;
 }
 /* SECTION 1----STARTING PART(start) */
 .std-page {
@@ -25,12 +46,9 @@ h1 {
   margin-right: 100px; */
   position: relative;
 }
+
 .start {
-  margin: 0 210px;
-  padding: 88px 10px 0px;
-}
-.row {
-  margin: 0% 15% 0%;
+  margin: 0% 12.1% 0%;
   padding-top: 6%;
 }
 .start-left-box {
@@ -68,11 +86,9 @@ h1 {
   background-size: cover;
   z-index: -9;
 }
-.responsive img
-{
+.responsive img {
   width: 100%;
   height: auto;
-
 }
 .wrap-img {
   position: relative;
@@ -141,7 +157,7 @@ a:visited {
   white-space: normal;
   min-width: 185px;
 }
-.button.btn-dark{
+.button.btn-dark {
   line-height: 29px;
 }
 .btn-outline-dark {
@@ -164,13 +180,13 @@ a:visited {
 /* END OF BUTTONS */
 
 /* RESPONSIVE STARTER PART */
-@media only screen and (min-width: 446px){
-.button{
-  display: inline-block;
+@media only screen and (min-width: 446px) {
+  .button {
+    display: inline-block;
+  }
 }
-}
-@media only screen and (max-width: 506px){
-  .btn-outline-dark{
+@media only screen and (max-width: 506px) {
+  .btn-outline-dark {
     margin-bottom: 100px;
   }
 }
@@ -180,45 +196,178 @@ a:visited {
     font-size: 2.625rem;
     line-height: 1.29;
   }
-  .bg-img{
+  .bg-img {
     width: 500px;
   }
   .start-left-box {
-    padding:0% 
+    padding: 0%;
   }
-  .btn-outline-dark{
-     margin-top:10px;
-     margin-bottom: 10px;
+  .btn-outline-dark {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
-@media only screen and (max-width: 1226px) and (min-width:960px)
-{
-  .start-left-box{
+@media only screen and (max-width: 1226px) and (min-width: 960px) {
+  .start-left-box {
     /* padding-right: 3%; */
   }
-  .btn-outline-dark{
-    margin-top:10px;
+  .btn-outline-dark {
+    margin-top: 10px;
     margin-bottom: 50px;
- } 
- @media only screen and (min-width:960px)
- {
+  }
+}
+@media only screen and (min-width: 960px) /*60rem*/ {
   h1 {
-    font-size: 2.625rem;
+    /* font-size: 2.625rem; */
     line-height: 1.29;
   }
-  .start-left-box{
+
+  .start-left-box {
     padding-right: 3%;
   }
- }
+  h2 {
+    font-size: 2.25rem;
+    line-height: 1.33;
+  }
+  h3 {
+    font-size: 1.75rem;
+    line-height: 1.14;
+  }
 }
-@media only screen and (min-width: 1226px)
-{
-  .button{
+
+@media only screen and (min-width: 1226px) {
+  .button {
     margin-bottom: 50px;
   }
-
+  .btn-2 {
+    margin-bottom: -50px;
+  }
 }
 
 .l-col-widget {
   margin-bottom: 40px;
+}
+
+/* SECTION 2  */
+.class2 {
+  margin: 6% 12.1%;
+  text-align: center;
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.container:after,
+.container:before {
+  content: " ";
+  display: table;
+}
+.align-h2 {
+  margin: 10px 0;
+}
+.para-section-2 {
+  font-size: 1rem;
+  margin-bottom: 20px;
+  line-height: 28px;
+  color: #3b3f47;
+  text-align: center;
+  /* justify-content: space-between; */
+}
+
+@media only screen and (min-width: 960px) {
+  .para-section-2 {
+    font-size: 28px;
+    line-height: 34px;
+  }
+}
+
+.row:after,
+.row:before {
+  content: " ";
+  display: table;
+}
+
+.row-margin {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.wrap-section-2-img img {
+  width: 370px;
+  height: 278px;
+  max-width: 370px;
+}
+.divider-right {
+  border-right: 1px dashed rgba(11, 19, 32, 0.3);
+}
+.mb-md {
+  margin-top: 38px;
+  margin-bottom: 30px;
+}
+.col-lg-6 {
+  padding: 0 15px;
+}
+.wrap {
+  padding: 30px;
+  transition: all 0.3s;
+}
+.h2-section2::before {
+  box-sizing: inherit;
+}
+.h2-section2 {
+  font-size: 3rem;
+  font-weight: 600;
+}
+.h2-section2::after {
+  box-sizing: inherit;
+}
+/*buttons section 2*/
+
+@media only screen and (min-width: 960px) {
+  .two-column .button {
+    width: 90%;
+  }
+}
+.two-column .button {
+  width: 100%;
+  margin: 0 auto 20px;
+  max-width: 450px;
+}
+
+.btn-white {
+  /* padding: 9px 29px; */
+  font-size: 0.875rem;
+  background: 0 0;
+  border-style: solid;
+  border-width: 1px;
+  color: #0b1320;
+  border-color: #0b1320;
+}
+
+.btn-white:hover {
+  padding: 8px 28px;
+  border: 2px solid #0b1320;
+  color: #0b1320;
+  background-color: transparent;
+}
+@media only screen and (max-width: 991px) {
+  .divider-right{
+    border: none;
+  }
+  .class2{
+    margin: 6% 5%;
+  }
+}
+
+@media only screen and (max-width:700px)
+{
+  .class2{
+    margin: 6% 3%;
+  }
+  .container{
+    padding: 0 0;
+  }
 }
