--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,19 @@ h2 {
   font-style: normal;
   color: #0b1320;
 }
+h3,
+h4 {
+  font-size: 1.5rem;
+  line-height: 1.25;
+}
+h4 {
+  font-weight: 500;
+  color: #0b1320;
+  font-family: neue-haas-grotesk-display, Helvetica, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  margin: 10px 0;
+}
 img {
   width: 100%;
   max-width: 45rem;
@@ -82,7 +95,11 @@ img {
 }
 .bg-img {
   /* background-image: url("../../images/bg-img.png"); */
-  background: linear-gradient(108deg, rgba(232,220,249,1) 0%, rgba(120,85,167,1) 100%);
+  background: linear-gradient(
+    108deg,
+    rgba(232, 220, 249, 1) 0%,
+    rgba(120, 85, 167, 1) 100%
+  );
   background-size: cover !important;
   position: absolute;
   width: 100%;
@@ -383,12 +400,15 @@ a:visited {
 .class3 {
   color: #fff;
   background-color: #0b1320;
+  
 }
-.class3 p {
+.class3 p,
+h4 {
   color: #fff;
 }
 .space {
-  margin: 0% 12.1%;
+  margin-right: 0 12.1%;
+
 }
 .section-3-spacing {
   padding-top: 115px;
@@ -411,6 +431,9 @@ a:visited {
 @media only screen and (min-width: 960px) {
   .sec3-heading {
     padding-bottom: 31px;
+  }
+  .l-col-widget {
+    margin-top: 44px;
   }
 }
 @media only screen and (max-width: 960px) {
@@ -450,4 +473,29 @@ i:hover {
 .col-image {
   width: 80px;
   margin-bottom: 20px;
+}
+.l-col-widget {
+  margin-bottom: 40px;
+}
+@media (min-width: 768px) {
+  .col-md-5 {
+    width: 41.6666666667%;
+  }
+}
+.col {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  .col-md-offset-2 {
+    margin-left: 16.6666666667%;
+  }
+}
+
+@media (min-width: 768px) {
+  .col-md-5 {
+    width: 41.6666666667%;
+  }
 }
