--- a/css/styles.css
+++ b/css/styles.css
@@ -400,7 +400,6 @@ a:visited {
 .class3 {
   color: #fff;
   background-color: #0b1320;
-  
 }
 .class3 p,
 h4 {
@@ -408,7 +407,6 @@ h4 {
 }
 .space {
   margin-right: 0 12.1%;
-
 }
 .section-3-spacing {
   padding-top: 115px;
@@ -497,5 +495,44 @@ i:hover {
 @media (min-width: 768px) {
   .col-md-5 {
     width: 41.6666666667%;
+  }
+}
+/* SECTION 4  */
+.sec-width{
+  max-width: 1140px;
+}
+.class4{
+  margin: 6% 12.1%;
+  text-align: center;
+}
+.banners {
+  text-align: center;
+  font-size: 0;
+}
+.banner {
+  display: inline-block;
+  width: 120px;
+  margin: 12px;
+}
+.banner:nth-child(n+13) {
+  display: none;
+}
+@media only screen and (max-width: 991px) {
+  .class4{
+    margin: 6% 5%;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .class4 {
+    margin: 6% 3%;
+  }
+}
+@media only screen and (min-width: 960px) {
+  .banner {
+    width: 140px;
+    margin: 20px;
+  }
+  .banner:nth-child(n+13) {
+    display: inline-block;
   }
 }
