--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ h2 {
   font-size: 1.75rem;
   line-height: 2.125rem;
   line-height: 1.25;
-  font-family: neue-haas-grotesk-display, Helvetica, sans-serif;
+  font-family:  Helvetica, sans-serif;
   font-weight: 700;
   font-style: normal;
   color: #0b1320;
@@ -40,10 +40,10 @@ h4 {
   font-size: 1.5rem;
   line-height: 1.25;
 }
-h4 {
+h4 ,h6  {
   font-weight: 500;
   color: #0b1320;
-  font-family: neue-haas-grotesk-display, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-weight: 600;
   font-style: normal;
   margin: 10px 0;
@@ -498,10 +498,10 @@ i:hover {
   }
 }
 /* SECTION 4  */
-.sec-width{
+.sec-width {
   max-width: 1140px;
 }
-.class4{
+.class4 {
   margin: 6% 12.1%;
   text-align: center;
 }
@@ -514,11 +514,11 @@ i:hover {
   width: 120px;
   margin: 12px;
 }
-.banner:nth-child(n+13) {
+.banner:nth-child(n + 13) {
   display: none;
 }
 @media only screen and (max-width: 991px) {
-  .class4{
+  .class4 {
     margin: 6% 5%;
   }
 }
@@ -532,7 +532,8 @@ i:hover {
     width: 140px;
     margin: 20px;
   }
-  .banner:nth-child(n+13) {
+  .banner:nth-child(n + 13) {
     display: inline-block;
   }
 }
+
