--- a/css/carousel.css
+++ b/css/carousel.css
@@ -135,7 +135,7 @@
     height: 59px;
   }
   .carousel.testimonial-home .testimonial-logo:after {
-    background: url(../../images/asset7.png) no-repeat;
+    background: url(../images/asset7.png) no-repeat;
     right: -134px;
     width: 34px;
     height: 28px;
