--- a/css/carousel.css
+++ b/css/carousel.css
@@ -222,6 +222,7 @@
 @media only screen and (min-width: 60rem){
   .carousel.testimonial-home .testimonial-card .author-name {
     font-size: 1.5rem;
+    font-weight: 600;
 }
 }
 
