--- a/css/styles.css
+++ b/css/styles.css
@@ -664,7 +664,23 @@ i:hover {
    
   }
 }
+.hidden-small{
+  display: none;
+}
+.btn-dark{
+  background: #0b1320;
+  line-height: 0;
+}
 @media only screen and (min-width: 960px) 
 {
-   
+   .contact-sales-button{
+     position: fixed; 
+     bottom: 42px;
+     right: 20px; 
+
+   }
+   .hidden-small{
+     display: block;
+   }
 }
+
