--- a/css/styles.css
+++ b/css/styles.css
@@ -409,6 +409,11 @@ a:visited {
 .space {
   margin-right: 0 12.1%;
 }
+@media only screen and (max-width: 576px){
+  .space {
+    padding: 0 12%;
+  }
+}
 .section-3-spacing {
   padding-top: 115px;
   padding-bottom: 100px;
