--- a/css/styles.css
+++ b/css/styles.css
@@ -410,7 +410,7 @@ a:visited {
   margin-right: 0 12.1%;
 }
 @media only screen and (max-width: 576px){
-  .space {
+  .container {
     padding: 0 12%;
   }
 }
