sec2 padding container updated

--- a/css/styles.css
+++ b/css/styles.css
@@ -392,9 +392,9 @@ a:visited {
   .class2 {
     margin: 6% 3%;
   }
-  .container {
+  /* .container {
     padding: 0 0;
-  }
+  } */
 }
 
 /* ----------------SECTION 3--------------------- */
